@@ -1,8 +1,13 @@
-2013-02-06  Stefan Singer <stefan.singer@freescale.com> 
-		+ Ilija Kocho <ilijak@siva.com.mk>
+2013-04-01  Ilija Kocho <ilijak@siva.com.mk>
 
-	* enhanced endianness support for devices with big and little endian
-	* added support for MPC5xxx in addition to Kinetis
+	* src/hal_freescale_edma.c:	Add clock gating enable.
+
+2013-02-06  Stefan Singer <stefan.singer@freescale.com>
+		    Ilija Kocho <ilijak@siva.com.mk>
+
+	* include/freescale_edma.h src/hal_freescale_edma.c:	
+	enhanced endianness support for devices with big and little endian
+	added support for MPC5xxx in addition to Kinetis
 	(see Bugzilla 1001752).
 	
 2012-05-04  Ilija Kocho  <ilijak@siva.com.mk>
